// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mantine radio group hooks > renders Disabled 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_46b77525 mantine-InputWrapper-root mantine-RadioGroup-root"
  >
    <div
      class="m_8fdc1311 mantine-InputWrapper-label mantine-RadioGroup-label"
      id="mantine-1fu8n1fu8-label"
    >
      Radio Group
    </div>
    <div
      aria-labelledby="mantine-1fu8n1fu8-label"
      role="radiogroup"
    >
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                disabled=""
                id="mantine-0cyk5rcyk"
                name="$"
                type="radio"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
              data-disabled="true"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                data-disabled="true"
                for="mantine-0cyk5rcyk"
              >
                One
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-checked="true"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                checked=""
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                disabled=""
                id="mantine-0px4bipx4"
                name="$"
                type="radio"
                value="2"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
              data-disabled="true"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                data-disabled="true"
                for="mantine-0px4bipx4"
              >
                Two
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                disabled=""
                id="mantine-12voha2vo"
                name="$"
                type="radio"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
              data-disabled="true"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                data-disabled="true"
                for="mantine-12voha2vo"
              >
                Three
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`mantine radio group hooks > renders Empty 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_46b77525 mantine-InputWrapper-root mantine-RadioGroup-root"
  >
    <div
      class="m_8fdc1311 mantine-InputWrapper-label mantine-RadioGroup-label"
      id="mantine-1ssssssss-label"
    >
      Radio Group
    </div>
    <div
      aria-labelledby="mantine-1ssssssss-label"
      role="radiogroup"
    >
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-0px4bipx4"
                name="$"
                type="radio"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-0px4bipx4"
              >
                One
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-12voha2vo"
                name="$"
                type="radio"
                value="2"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-12voha2vo"
              >
                Two
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-1fu8n1fu8"
                name="$"
                type="radio"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-1fu8n1fu8"
              >
                Three
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`mantine radio group hooks > renders Error 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_46b77525 mantine-InputWrapper-root mantine-RadioGroup-root"
    data-error="true"
  >
    <div
      class="m_8fdc1311 mantine-InputWrapper-label mantine-RadioGroup-label"
      id="mantine-1fu8n1fu8-label"
    >
      Radio Group
    </div>
    <div
      aria-describedby="mantine-1fu8n1fu8-error"
      aria-labelledby="mantine-1fu8n1fu8-label"
      role="radiogroup"
    >
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-0cyk5rcyk"
                name="$"
                type="radio"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-0cyk5rcyk"
              >
                One
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-checked="true"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                checked=""
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-0px4bipx4"
                name="$"
                type="radio"
                value="2"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-0px4bipx4"
              >
                Two
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-12voha2vo"
                name="$"
                type="radio"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-12voha2vo"
              >
                Three
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="m_8f816625 mantine-InputWrapper-error mantine-RadioGroup-error"
      id="mantine-1fu8n1fu8-error"
    >
      custom error error
    </p>
  </div>
</div>
`;

exports[`mantine radio group hooks > renders Populated 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_46b77525 mantine-InputWrapper-root mantine-RadioGroup-root"
  >
    <div
      class="m_8fdc1311 mantine-InputWrapper-label mantine-RadioGroup-label"
      id="mantine-1fu8n1fu8-label"
    >
      Radio Group
    </div>
    <div
      aria-labelledby="mantine-1fu8n1fu8-label"
      role="radiogroup"
    >
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-0cyk5rcyk"
                name="$"
                type="radio"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-0cyk5rcyk"
              >
                One
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-0px4bipx4"
                name="$"
                type="radio"
                value="2"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-0px4bipx4"
              >
                Two
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-checked="true"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                checked=""
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-12voha2vo"
                name="$"
                type="radio"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-12voha2vo"
              >
                Three
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`mantine radio group hooks > renders Required 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_46b77525 mantine-InputWrapper-root mantine-RadioGroup-root"
  >
    <div
      class="m_8fdc1311 mantine-InputWrapper-label mantine-RadioGroup-label"
      data-required="true"
      id="mantine-1fu8n1fu8-label"
    >
      Radio Group
      <span
        aria-hidden="true"
        class="m_78a94662 mantine-InputWrapper-required mantine-RadioGroup-required"
      >
         *
      </span>
    </div>
    <div
      aria-labelledby="mantine-1fu8n1fu8-label"
      role="radiogroup"
    >
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-checked="true"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                checked=""
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-0cyk5rcyk"
                name="$"
                type="radio"
                value="1"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-0cyk5rcyk"
              >
                One
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-0px4bipx4"
                name="$"
                type="radio"
                value="2"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-0px4bipx4"
              >
                Two
              </label>
            </div>
          </div>
        </div>
        <div
          class="m_f3f1af94 mantine-Radio-root m_5f75b09e mantine-Radio-root"
          data-label-position="right"
          style="--radio-color: var(--mantine-color-blue-filled);"
        >
          <div
            class="m_5f6e695e mantine-Radio-body"
          >
            <div
              class="m_89c4f5e4 mantine-Radio-inner"
              data-label-position="right"
            >
              <input
                class="mantine-focus-auto m_8a3dbb89 mantine-Radio-radio"
                id="mantine-12voha2vo"
                name="$"
                type="radio"
                value="3"
              />
              <svg
                aria-hidden="true"
                class="m_f3ed6b2b mantine-Radio-icon"
                fill="none"
                viewBox="0 0 5 5"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2.5"
                  cy="2.5"
                  fill="currentColor"
                  r="2.5"
                />
              </svg>
            </div>
            <div
              class="m_d3ea56bb mantine-Radio-labelWrapper"
            >
              <label
                class="m_8ee546b8 mantine-Radio-label"
                for="mantine-12voha2vo"
              >
                Three
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
